Import of AVENJ/POEx-ZMQ-0.000_002 from CPAN.
gitpan-cpan-distribution: POEx-ZMQ
gitpan-cpan-version:      0.000_002
gitpan-cpan-path:         AVENJ/POEx-ZMQ-0.000_002.tar.gz
gitpan-cpan-author:       AVENJ
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl module POEx-ZMQ
 
+0.000_002 2014-07-26
+
+  - Set ZMQ_LINGER to 0 during ->stop
+
+  - BAIL_OUT of test suite if libzmq is too old
+
 0.000_001 2014-07-26
 
-   - Initial development release
+  - Initial development release
