--- a/README
+++ b/README
@@ -12,7 +12,7 @@ SYNOPSIS
             # Set up a ROUTER; save our Context for creating other sockets later:
             $_[HEAP]->{ctx} = POEx::ZMQ->context;
 
-            $_[HEAP]->{rtr} = POEx::ZMQ::Socket->new(
+            $_[HEAP]->{rtr} = POEx::ZMQ->socket(
               context => $_[HEAP]->{ctx},
               type    => ZMQ_ROUTER,
             );
@@ -71,6 +71,11 @@ DESCRIPTION
     The context object should be shared between sockets belonging to the
     same process; a forked child process should create a new context with
     its own set of sockets.
+
+   socket
+      my $sock = POEx::ZMQ->socket(context => $ctx, type => ZMQ_ROUTER);
+
+    Returns a new POEx::ZMQ::Socket. @_ is passed through.
 
 AUTHOR
     Jon Portnoy <avenj@cobaltirc.org>
