--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl module POEx-ZMQ
 
+0.000_004 2014-07-27
+
+  - Fix dep list
+
+  - Requeue on EFSM
+    (Still need proper internal queue management.)
+
 0.000_003 2014-07-27
 
   - Provide POEx::ZMQ->socket() constructor shortcut
