Import of AVENJ/POEx-ZMQ-0.000_005 from CPAN.
gitpan-cpan-distribution: POEx-ZMQ
gitpan-cpan-version:      0.000_005
gitpan-cpan-path:         AVENJ/POEx-ZMQ-0.000_005.tar.gz
gitpan-cpan-author:       AVENJ
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -31,6 +31,7 @@ SYNOPSIS
             my $response;
             # ...
 
+            # $_[SENDER] was the ROUTER socket, send a response back:
             $_[KERNEL]->post( $_[SENDER], send_multipart =>
               $id, '', $response
             );
