--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl module POEx-ZMQ
 
+0.000_005 2014-07-27
+
+  - Provide ->zmq_version method on POEx::ZMQ::Socket objs
+
+  - BAIL_OUT on some other possible linker failures
+
+  - Don't bother trying to clean up sockets & contexts properly if in GD
+
 0.000_004 2014-07-27
 
   - Fix dep list
