Import of AVENJ/POEx-ZMQ-0.002001 from CPAN.
gitpan-cpan-distribution: POEx-ZMQ
gitpan-cpan-version:      0.002001
gitpan-cpan-path:         AVENJ/POEx-ZMQ-0.002001.tar.gz
gitpan-cpan-author:       AVENJ
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl module POEx-ZMQ
 
+0.002001 2014-08-12
+
+  - Support for POEx::ZMQ instances with context sharing between sockets
+
+  - Parameterized ZMQSocket type
+
+  - Expanded tests & POD
+
+  - Minor optimizations
+
 0.001002 2014-08-03
 
   - Issue a warning when queuing app-side on EFSM.
