Import of AVENJ/POEx-ZMQ-0.002002 from CPAN.
gitpan-cpan-distribution: POEx-ZMQ
gitpan-cpan-version:      0.002002
gitpan-cpan-path:         AVENJ/POEx-ZMQ-0.002002.tar.gz
gitpan-cpan-author:       AVENJ
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module POEx-ZMQ
 
+0.002002 2014-08-13
+
+  - POEx::ZMQ::Constants fixes
+
 0.002001 2014-08-12
 
   - Support for POEx::ZMQ instances with context sharing between sockets
