Import of AVENJ/POEx-ZMQ-0.003001 from CPAN.
gitpan-cpan-distribution: POEx-ZMQ
gitpan-cpan-version:      0.003001
gitpan-cpan-path:         AVENJ/POEx-ZMQ-0.003001.tar.gz
gitpan-cpan-author:       AVENJ
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl module POEx-ZMQ
 
+0.003001 2014-08-16
+
+  - Add SSH tunnel example script from deprecated POEx-ZMQ3 dist
+
+  - Add ZMQEndpoint type to POEx::ZMQ::Types
+
+  - FFI backend optimizations
+
 0.002002 2014-08-13
 
   - POEx::ZMQ::Constants fixes
