--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module POEx-ZMQ
 
+0.005002 2014-10-22
+
+  - Documentation fixes
+
 0.005001 2014-10-08
 
   - Add zmq_curve_keypair support via $context->generate_keypair
