--- a/README
+++ b/README
@@ -119,6 +119,11 @@ DESCRIPTION
     @_ is passed through to the POEx::ZMQ::Socket constructor.
 
 SEE ALSO
+    Text::ZPL for ZeroMQ Property Language support.
+
+    Crypt::ZCert for ZeroMQ4+ CURVE certificate management & key pair
+    generation.
+
     Convert::Z85 for encoding/decoding CURVE keys (see zmq_curve(7) on
     libzmq4+).
 
